# BRL_MCP

./: .env.example  LICENSE  README.md  client.py  mcp_server.py  pyproject.toml
scripts/: listener.tcl
src/brlcad_mcp/: __init__.py  __main__.py  cli.py  config.py
src/brlcad_mcp/client/: __init__.py  agent.py
src/brlcad_mcp/server/: __init__.py  __main__.py  app.py
src/brlcad_mcp/server/tools/: __init__.py  boolean.py  primitives.py
src/brlcad_mcp/transport/: __init__.py  socket_bridge.py
tests/: test_config.py  test_tools.py  test_transport.py
